--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,11 @@
 [user]
 	email = omarcoptan9@gmail.com
 	name = Omar Mohamed
-	signingkey = ~/.ssh/id_rsa.pub
+	signingkey = /home/coptan/.ssh/id_rsa.pub
 [commit]
     gpgsign = true
-[credential]
-	helper = store
 [gpg]
-    format = ssh
+	format = ssh
 [core]
 	editor = nvim
 [pull]
