--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,6 +40,11 @@ bind -r J resize-pane -D 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
+bind -n M-j previous-window
+bind -n M-k next-window
+bind -n M-h switch-client -p
+bind -n M-l switch-client -n
+
 # bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 
 # forget the find window.  That is for chumps
