--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -1,7 +1,9 @@
+# vim: filetype=conf
+
 ncmpcpp_directory = "~/.config/ncmpcpp"
 lyrics_directory = "~/.local/share/lyrics"
 mpd_host = "127.0.0.1"
-mpd_music_dir = "~/Music"
+mpd_music_dir = "~/music"
 external_editor = nvim
 use_console_editor = yes
 current_item_prefix = $(cyan)$r$b
@@ -12,3 +14,4 @@ progressbar_look = ->
 progressbar_elapsed_color = blue:b
 media_library_albums_split_by_date = no
 ignore_leading_the = yes
+startup_screen = "browser"
