--- a/.config/mako/config
+++ b/.config/mako/config
@@ -19,3 +19,9 @@ border-color=#bf616a
 
 [mode=dnd]
 invisible=1
+
+[app-name=wpa_supplicant category=network.connected]
+on-notify=exec play -q /usr/share/sounds/freedesktop/stereo/service-login.oga
+
+[app-name=wpa_supplicant category=network.disconnected]
+on-notify=exec play -q /usr/share/sounds/freedesktop/stereo/service-logout.oga
