--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,7 @@ bind - split-window -v
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
 
 bind r source ~/.config/tmux/tmux.conf
