--- a/.config/paru/paru.conf
+++ b/.config/paru/paru.conf
@@ -33,7 +33,7 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #
 # Binary OPTIONS
 #
-#[bin]
+[bin]
 FileManager = nnn
 #MFlags = --skippgpcheck
 Sudo = doas
