--- a/.config/doas/doas.conf
+++ b/.config/doas/doas.conf
@@ -1,4 +1,13 @@
 permit persist :wheel
 permit persist keepenv :wheel as root
 permit nopass keepenv root as root
+
 permit nopass :wheel as root cmd /usr/bin/loadkeys
+permit nopass :wheel as root cmd /usr/bin/mount
+permit nopass :wheel as root cmd /usr/bin/umount
+permit nopass :wheel as root cmd /usr/bin/sv
+permit nopass :wheel as root cmd /usr/bin/vsv
+permit nopass :wheel as root cmd /usr/bin/zzz
+permit nopass :wheel as root cmd /usr/bin/ZZZ
+permit nopass :wheel as root cmd /usr/bin/reboot
+permit nopass :wheel as root cmd /usr/bin/poweroff
