mako: disable notification sound for screenlightctl
Signed-off-by: Omar Mohamed <omarcoptan9@gmail.com>

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -20,6 +20,9 @@ border-color=#bf616a
 [mode=dnd]
 invisible=1
 
+[app-name=screenlightctl]
+on-notify=none
+
 [app-name=wpa_supplicant category=network.connected]
 on-notify=exec play -q /usr/share/sounds/freedesktop/stereo/service-login.oga
 
