config/tmux: update some keybindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,7 +41,8 @@ bind -r J resize-pane -D 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-bind -n M-j previous-window
-bind -n M-k next-window
+bind -rn M-Tab last-window
+bind -rn M-k next-window
+bind -rn M-j previous-window
 bind -n M-h switch-client -p
 bind -n M-l switch-client -n
