config/tmux: fix tmux-256colors as suggested by neovim

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set -sa terminal-overrides ",screen-256color*:Tc"
+set-option -a terminal-features 'foot:RGB'
 
 set -sg escape-time 0
 set -sg renumber-windows on
